--- a/jeeliz-demo/index.html
+++ b/jeeliz-demo/index.html
@@ -19,7 +19,8 @@
     <!-- INCLUDE JEELIZ THREE.JS HELPER -->
     <script type="text/javascript" src="./libs/JeelizThreejsHelper.js"></script>
     <script type="text/javascript" src="./libs/GLTFLoader.js"></script>
-    <script type="text/javascript" src="./libs/three-vrm.js"></script>
+    <script type="text/javascript" src="./libs/VRMLoader.js"></script>
+    <script type="text/javascript" src="./libs/WebVRMHelper.js"></script>
 
 
     <!-- INCLUDE DEMO SCRIPT -->
