add:change model function

--- a/jeeliz-demo/index.html
+++ b/jeeliz-demo/index.html
@@ -35,7 +35,9 @@
 
 <body onload="main()" style='color: white'>
     <canvas width="600" height="600" id='jeeFaceFilterCanvas'></canvas>
-
+    <div id="ui">
+        <input type="file" id="uploadBtn">
+    </div>
 
 </body>
 
