add:jeeliz icon

--- a/jeeliz-demo/index.html
+++ b/jeeliz-demo/index.html
@@ -36,6 +36,9 @@
 <body onload="main()" style='color: white'>
     <canvas width="600" height="600" id='jeeFaceFilterCanvas'></canvas>
     <div id="ui">
+        <img src="assets/LOGO_JEELIZ_BLUE.png" width="150px" alt=""><br>
+        <a href="https://github.com/jeeliz/jeelizFaceFilter"> This demo uses jeelizFaceFilter </a>
+
         <div id="control">
             <div>
                 <button id="downloadBtn"><img src="assets/camera.png" alt="take pic" width="200px" /></button>
