--- a/jeeliz-demo/index.html
+++ b/jeeliz-demo/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="en-EN" />
 
-    <title>JEELIZ FACE FILTER : THREE.JS CUBE DEMO WITH THREE.JS HELPER</title>
+    <title>VRM自撮りフィルター</title>
 
     <!-- INCLUDE JEELIZ FACEFILTER SCRIPT -->
     <script type="text/javascript" src="./libs/jeeliz/jeelizFaceFilter.js"></script>
